--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                <h2>Чем мы занимаемся</h2>
           </li>    
         <li>
-         <img src="./images/comp.jpg" alt="computer desk" width="370" height="294">
+         <img src="./images/comp.jpg" alt="computerdesk" width="370" height="294">
         </li>
         <li>
-          <img src="/images/planch.jpg" alt="computer desk" width="370" height="294">
+          <img src="/images/planch.jpg" alt="pedswer"width="370" height="294">
         </li>
         <li>
-          <img src="/images/nont.jpg" alt="computer desk" width="370" height="294">
+          <img src="/images/nont.jpg" alt="werbure" width="370" height="294">
           </li>
       </ul>
       </section> 
