--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
          <img src="./images/comp.jpg" alt="computerdesk" width="370" height="294">
         </li>
         <li>
-          <img src="/images/planch.jpg" alt="pedswer"width="370" height="294">
+          <img src="./images/planch.jpg" alt="pedswer"width="370" height="294">
         </li>
         <li>
-          <img src="/images/nont.jpg" alt="werbure" width="370" height="294">
+          <img src="./images/nont.jpg" alt="werbure" width="370" height="294">
           </li>
       </ul>
       </section> 
@@ -83,22 +83,22 @@
              <h2>Наша команда</h2>
           </li>
           <li>
-            <img src="/images/onnep.jpg" alt="our team" width="270" height="260">
+            <img src="./images/onnep.jpg" alt="our team" width="270" height="260">
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/images//tvopep.jpg" alt="our team" width="270" height="260">
+            <img src="./images//tvopep.jpg" alt="our team" width="270" height="260">
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="/images/fripo.jpg" alt="our team" width="270" height="260">
+            <img src="./images/fripo.jpg" alt="our team" width="270" height="260">
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="/images/fopeop.jpg" alt="our team" width="270" height="260">
+            <img src="./images/fopeop.jpg" alt="our team" width="270" height="260">
             <h3>Михаил Ермаков</h3>
             <p>UI Designer </p>
           </li> 
