--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images//tvopep.jpg" alt="our team" width="270" height="260">
+            <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/fripo.jpg" alt="our team" width="270" height="260">
+            <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/fopeop.jpg" alt="our team" width="270" height="260">
+            <img src="./images/fripo.jpg" alt="our team" width="270" height="260">
             <h3>Михаил Ермаков</h3>
             <p>UI Designer </p>
           </li> 
