--- a/index.html
+++ b/index.html
@@ -10,12 +10,20 @@
       <nav>
         <a href="./">WEBstydio</a>
         <ul>
-          <li><a href="./">Студия </a></li>
-          <li><a href="./">Портфолио</a></li>
-          <li><a href="./">Контакты</a></li>
+          <li>
+            <a href="./">Студия </a>
+          </li>
+          <li>
+            <a href="./">Портфолио</a>
+          </li>
+          <li>
+            <a href="./">Контакты</a>
+          </li>
         </ul>
       </nav>
 
+
+      
       <ul>
         <li><a href="../info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="../+38096111111">+38096111111 </a></li>
@@ -34,10 +42,7 @@
       </section>
 
       <section>
-        <ul>
-        <li>
           <h2>О нас</h2>
-        </li>
           <li>
             <h3>УВАГА К ДЕТАЛЯМ</h3>
             <p>Идейные соображения, а также начало повседневной работы по
@@ -61,10 +66,8 @@
     </section>
 
       <section>
-        <ul>
-          <li>
-               <h2>Чем мы занимаемся</h2>
-          </li>    
+       <h2>Чем мы занимаемся</h2>
+       <ul>
         <li>
          <img src="./images/comp.jpg" alt="computerdesk" width="370" height="294">
         </li>
@@ -78,19 +81,17 @@
       </section> 
 
       <section>
-        <ul>
-          <li>
+        <lang
              <h2>Наша команда</h2>
-          </li>
           <li>
             <img src="./images/onnep.jpg" alt="our team" width="270" height="260">
-            <h3>Игорь Демьяненко</h3>
+            <p>Игорь Демьяненко</p>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3>Ольга Репина<h3>
+            <h3>Frontend Developer</h3>
           </li>
           <li>
             <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
