--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 
     <main>
       <section>
-        <div>
           <h1>
             ЭФЕКТИВНЫЕ РЕШЕНИЯ<br />
             ДЛЯ ВАШЕГО БИЗНЕСА
           </h1>
           <button type="button">Заказать услугу</button>
-        </div>
       </section>
 
       <section>
+        <html lang="ru"/>
           <h2>О нас</h2>
+          <ul>
           <li>
             <h3>УВАГА К ДЕТАЛЯМ</h3>
             <p>Идейные соображения, а также начало повседневной работы по
@@ -66,22 +66,23 @@
     </section>
 
       <section>
+        <html lang="ru"/>
        <h2>Чем мы занимаемся</h2>
        <ul>
         <li>
-         <img src="./images/comp.jpg" alt="computerdesk" width="370" height="294">
+         <img src="./images/comp.jpg" alt="картинка 1" width="370" height="294">
         </li>
         <li>
-          <img src="./images/planch.jpg" alt="pedswer"width="370" height="294">
+          <img src="./images/planch.jpg" alt="картинка 2"width="370" height="294">
         </li>
         <li>
-          <img src="./images/nont.jpg" alt="werbure" width="370" height="294">
+          <img src="./images/nont.jpg" alt="картинка 3" width="370" height="294">
           </li>
       </ul>
       </section> 
 
       <section>
-        <lang
+        <html lang="ru"
              <h2>Наша команда</h2>
           <li>
             <img src="./images/onnep.jpg" alt="our team" width="270" height="260">
@@ -90,17 +91,17 @@
           </li>
           <li>
             <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
-            <h3>Ольга Репина<h3>
-            <h3>Frontend Developer</h3>
+            <p>Ольга Репина</p>
+            <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
-            <h3>Николай Тарасов</h3>
+            <p>Николай Тарасов</p>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/fripo.jpg" alt="our team" width="270" height="260">
-            <h3>Михаил Ермаков</h3>
+            <p>Михаил Ермаков</p>
             <p>UI Designer </p>
           </li> 
         </ul>
@@ -109,7 +110,7 @@
 
     <footer>
       <address>
-        <ul></ul>
+        <ul>
           <a href="./">WEBstydio</a>
 
         <div>
@@ -117,7 +118,7 @@
         </div>
         <div>
           <a href="../+38096111111">+38096111111 </a>
-        </div>
+        </ul>
       </address>
     </footer>
   </body>
