--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"
     <meta name="viewport" content="widht=device-widht,inital-scale=1.0" />
-    <title>DOCTYRE</title>
+    <title>MY Projext</title>
   </head>
+
   <body>
     <header>
       <nav>
-        <a href="./">WEBstydio</a>
+        <a href="index.html"><p lang="en"WEBstydio"></p></a>
         <ul>
           <li>
             <a href="./">Студия </a>
@@ -29,7 +31,6 @@
         <li><a href="../+38096111111">+38096111111 </a></li>
       </ul>
     </header>
-    </body>
 
     <main>
       <section>
@@ -67,9 +68,8 @@
     </section>
 
       <section>
-        <html lang="ru"/>
-       <h2>Чем мы занимаемся</h2>
        <ul>
+         <h2>Чем мы занимаемся</h2>
         <li>
          <img src="./images/comp.jpg" alt="картинка 1" width="370" height="294">
         </li>
@@ -85,6 +85,7 @@
       <section>
         <html lang="ru"
              <h2>Наша команда</h2>
+        <ul>
           <li>
             <img src="./images/onnep.jpg" alt="our team" width="270" height="260">
             <p>Игорь Демьяненко</p>
@@ -108,6 +109,7 @@
         </ul>
       </section>
     </main>
+    </body>
 
     <footer>
       <address>
