--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
 
   <body>
+    <nav>
     <header>
-      <nav>
+      
         <a href="index.htmllogo">WEBstydio</a>
        <ul>
           <li>Cтудія</li>
@@ -20,6 +21,7 @@
           <a href="../maitlo:info@devstudio.com">info@devstudio.com</a>
           <a href="../+38096111111">+38096111111 </a>
     </header>
+  </nav>
 
     <main>
       <!--Герой-->
