--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@
         <li>Контакты</li>
       </ul>
       <a href="../maitlo:info@devstudio.com">info@devstudio.com</a>
-      <a href="../+38096111111">+38096111111 </a>
-      </ul>
+      <a href="../+38096111111">+38096111111 </a
      </header> 
   </nav>
 </header>
-          
-    
-  
 
     <main>
       <!--Герой-->
@@ -86,23 +82,25 @@
           <li>
             <img src="./images/onnep.jpg" alt="our team" width="270" height="260">
             <h3>Игорь Демьяненко</h3>
-          <html lang="en"
+          <html lang="en">
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
-            <p
             <h3>Ольга Репина</h3>
+            <html lang="en">
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
+            <img src="./images/fripo.jpg" alt="our team" width="270" height="260">
             <h3>Николай Тарасов</h3>
+            <html lang="en">
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/fripo.jpg" alt="our team" width="270" height="260">
+            <img src="./images/fopeop.jpg" alt="our team" width="270" height="260">
             <h3>Михаил Ермаков</h3>
+            <html lang="en">
             <p>UI Designer </p>
           </li> 
         </ul>
