--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <nav>
     <header>
       <a href="index.htmllogo">WEBstydio</a>
-      <ul>
+       </nav>
+         <ul>
         <li>Cтудія</li>
         <li>Портфолио</li>
         <li>Контакты</li>
@@ -19,7 +20,7 @@
       <a href="../maitlo:info@devstudio.com">info@devstudio.com</a>
       <a href="../+38096111111">+38096111111 </a
      </header> 
-  </nav>
+
 </header>
 
     <main>
@@ -106,20 +107,18 @@
         </ul>
       </section>
     </main>
-    
 
 
-<footer>
+   <footer><
   <section>
 	<a href="index.htmllogo">WEBstydio</a>
 	<address>
 		г. Киев, пр-т Леси Украинки, 26 <br>
 		<a href="mailto:info@example.com">info@example.com</a>  <br>
 		<a href="tel:+380991111111">+38 099 111 11 11</a>
-  </address>
-
+  </addres>
   </section>
-</footer>
+</footer> 
 </body>
 </html>
 
