--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
 
 <body>
-  <nav>
     <header>
+      <nav>
       <a href="index.htmllogo">WEBstydio</a>
        </nav>
          <ul>
@@ -18,7 +18,8 @@
         <li>Контакты</li>
       </ul>
       <a href="../maitlo:info@devstudio.com">info@devstudio.com</a>
-      <a href="../+38096111111">+38096111111 </a
+      <a href="../+38096111111">+38096111111</a>
+      </nav>
      </header> 
 
 </header>
