--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
       </nav>
      </header> 
 
-</header>
-
     <main>
       <!--Герой-->
       <section>
@@ -68,7 +66,7 @@
          <img src="./images/comp.jpg" alt="картинка 1" width="370" height="294">
         </li>
         <li>
-          <img src="./images/planch.jpg" alt="картинка 2"width="370" height="294">
+          <img src="./images/planch.jpg" alt="картинка 2" width="370" height="294">
         </li>
         <li>
           <img src="./images/nont.jpg" alt="картинка 3" width="370" height="294">
@@ -84,26 +82,26 @@
           <li>
             <img src="./images/onnep.jpg" alt="our team" width="270" height="260">
             <h3>Игорь Демьяненко</h3>
-          <html lang="en">
+          <lang="en></lang>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
             <h3>Ольга Репина</h3>
-            <html lang="en">
-            <p>Frontend Developer</p>
+            <lang="en>
+            <p>Frontend Developer</p></lang>
           </li>
           <li>
             <img src="./images/fripo.jpg" alt="our team" width="270" height="260">
             <h3>Николай Тарасов</h3>
-            <html lang="en">
-            <p>Marketing</p>
+            <lang="en>
+            <p>Marketing</p></lang>
           </li>
           <li>
             <img src="./images/fopeop.jpg" alt="our team" width="270" height="260">
             <h3>Михаил Ермаков</h3>
-            <html lang="en">
-            <p>UI Designer </p>
+            <lang="en>
+            <p>UI Designer </p></lang>
           </li> 
         </ul>
       </section>
