--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
 <body>
     <header>
       <nav>
-      <a href="index.htmllogo">WEBstydio</a>
-       </nav>
+      <a href="index.htmllogo"><p lang="en"> WEBstydio</p></a>
          <ul>
         <li>Cтудія</li>
         <li>Портфолио</li>
         <li>Контакты</li>
       </ul>
+      </nav>
       <a href="../maitlo:info@devstudio.com">info@devstudio.com</a>
       <a href="../+38096111111">+38096111111</a>
-      </nav>
      </header> 
 
     <main>
@@ -82,43 +81,37 @@
           <li>
             <img src="./images/onnep.jpg" alt="our team" width="270" height="260">
             <h3>Игорь Демьяненко</h3>
-          <lang="en></lang>
-            <p>Product Designer</p>
+				    <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/tvopep.jpg" alt="our team" width="270" height="260">
             <h3>Ольга Репина</h3>
-            <lang="en>
-            <p>Frontend Developer</p></lang>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/fripo.jpg" alt="our team" width="270" height="260">
             <h3>Николай Тарасов</h3>
-            <lang="en>
-            <p>Marketing</p></lang>
+				      <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/fopeop.jpg" alt="our team" width="270" height="260">
             <h3>Михаил Ермаков</h3>
-            <lang="en>
-            <p>UI Designer </p></lang>
+				<p lang="en">UI Designer</p>
           </li> 
         </ul>
       </section>
     </main>
 
-
-   <footer><
-  <section>
-	<a href="index.htmllogo">WEBstydio</a>
+   <footer>
+	<a href="index.htmllogo"><p lang="en"> WEBstydio</p></a>
 	<address>
 		г. Киев, пр-т Леси Украинки, 26 <br>
 		<a href="mailto:info@example.com">info@example.com</a>  <br>
-		<a href="tel:+380991111111">+38 099 111 11 11</a>
-  </addres>
-  </section>
-</footer> 
+		<a href="tel:+380991111111">+38 0991111111</a>
+	</address>
+</footer>
 </body>
-</html>
+</html> 
+
 
          
