--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="widht=device-widht,inital-scale=1.0" />
-    <title>WEBstydio</title>
-  </head>
-
+    <link rel="preconnet" href="https://fonts.google.com" />
+     <link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    
   <body>
-    <header>
-      <nav>
-        <a href="index.htmllogo"><p lang="en">WEBstydio</p></a>
+    <header class="header">
+      <nav class="header-nav">
+        <a class="header-logo" href="index.htmllogo"><p lang="en">WEBstydio</p></a>
         <ul>
           <li>Cтудія</li>
           <li>Портфолио</li>
