--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
      <link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    
+    <title>WEBstydio</title>
+    <link rel="stylesheet" href="./styles.css">
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="header-logo" href="index.htmllogo"><p lang="en">WEBstydio</p></a>
+        <a class="logo" href="index.html"> <span class="logo-accent>"<p lang="en">WEBstydio</p></a>
         <ul>
           <li>Cтудія</li>
           <li>Портфолио</li>
