--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="index.html"> <span class="logo-accent>"<p lang="en">WEBstydio</p></a>
+        <a class="logo" href="./"> <span class="logo-accent">WEB</span>stydio</a>
         <ul>
           <li>Cтудія</li>
           <li>Портфолио</li>
