--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="header">
       <nav class="header-nav">
-        <a class="logo" href="./"> <span class="logo-accent">WEB</span>stydio</a>
+        <a class="logo" href="./"><span class="logo-accent">WEB</span><span class="logo-logocc">Stydio</span></a>
         <ul>
           <li>Cтудія</li>
           <li>Портфолио</li>
